Comment for two first lines

--- a/papers/edgesys2023/main.tex
+++ b/papers/edgesys2023/main.tex
@@ -1,5 +1,5 @@
-% \def \Comments{}
-\def \NewInsteadOfOld{}
+%\def \Comments{} % uncomment to have old (red) and new (blue) text side by side
+\def \NewInsteadOfOld{} % (iff previous line is commented) comment for old text only, uncomment for new text only 
 
 \documentclass[10pt,sigconf,letterpaper,nonacm]{acmart}
 \usepackage{mathtools}
