--- a/papers/edgesys2023/simulation.tex
+++ b/papers/edgesys2023/simulation.tex
@@ -26,7 +26,7 @@ more explanations.)
 
 \begin{figure}[tb]
   \begin{center}
-    \includegraphics[width=1.0\columnwidth]{final_edge_2.pdf}
+    \includegraphics[width=1.0\columnwidth]{placeholder.pdf}
     \vspace{-4.0ex}
     \caption{Comparing (a) baseline, (b) convex and (c) monotomic behaviros with
       a flock of drone scenario}
